--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <jolokia-core.version>1.7.1</jolokia-core.version>
 
         <docker.image.prefix>springcommunity</docker.image.prefix>
+        <docker.image.tag>latest</docker.image.tag>
         <docker.image.exposed.port>9090</docker.image.exposed.port>
         <docker.image.dockerfile.dir>${basedir}</docker.image.dockerfile.dir>
         <!-- podman is also supported -->
