--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
                                         <executable>${container.executable}</executable>
                                         <workingDirectory>${docker.image.dockerfile.dir}</workingDirectory>
                                         <arguments>
+                                            <argument>buildx</argument>
                                             <argument>build</argument>
                                             <argument>-f</argument>
                                             <argument>Dockerfile</argument>
