--- a/pom.xml
+++ b/pom.xml
@@ -158,47 +158,61 @@
 
         <profile>
             <id>buildDocker</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>exec-maven-plugin</artifactId>
-                            <version>3.1.1</version>
-                            <executions>
-                                <execution>
-                                    <id>docker-build</id>
-                                    <phase>install</phase>
-                                    <goals>
-                                        <goal>exec</goal>
-                                    </goals>
-                                    <configuration>
-                                        <executable>${container.executable}</executable>
-                                        <workingDirectory>${docker.image.dockerfile.dir}</workingDirectory>
-                                        <arguments>
-                                            <argument>buildx</argument>
-                                            <argument>build</argument>
-                                            <argument>-f</argument>
-                                            <argument>Dockerfile</argument>
-                                            <argument>--build-arg</argument>
-                                            <argument>ARTIFACT_NAME=${project.build.finalName}</argument>
-                                            <argument>--build-arg</argument>
-                                            <argument>EXPOSED_PORT=${docker.image.exposed.port}</argument>
-                                            <argument>--platform</argument>
-                                            <argument>${container.platform}</argument>
-                                            <argument>${container.build.extraarg}</argument>
-                                            <argument>-t</argument>
-                                            <argument>${docker.image.prefix}/${project.artifactId}:${docker.image.tag}</argument>
-                                            <argument>${project.build.directory}</argument>
-                                        </arguments>
-                                    </configuration>
-                                </execution>
-                            </executions>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-    </profiles>
+     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>3.1.1</version>
+                    <executions>
+                        <execution>
+                            <id>docker-build</id>
+                            <phase>install</phase>
+                            <goals>
+                                <goal>exec</goal>
+                            </goals>
+                            <configuration>
+                                <executable>${container.executable}</executable>
+                                <workingDirectory>${docker.image.dockerfile.dir}</workingDirectory>
+                                <arguments>
+                                    <argument>image</argument>
+                                    <argument>build</argument>
+                                    <argument>--platform=${container.platform}</argument>
+                                    <argument>--build-arg</argument>
+                                    <argument>ARTIFACT_NAME=${project.build.finalName}</argument>
+                                    <argument>--build-arg</argument>
+                                    <argument>EXPOSED_PORT=${docker.image.exposed.port}</argument>
+                                    <argument>-f</argument>
+                                    <argument>Dockerfile</argument>
+                                    <argument>-t</argument>
+                                    <argument>${docker.image.prefix}/${project.artifactId}:${docker.image.tag}</argument>
+                                    <argument>${project.build.directory}</argument>
+                                </arguments>
+                            </configuration>
+                        </execution>
+                        <execution>
+                            <id>docker-push</id>
+                            <phase>install</phase>
+                            <goals>
+                                <goal>exec</goal>
+                            </goals>
+                            <configuration>
+                                <executable>${container.executable}</executable>
+                                <workingDirectory>${docker.image.dockerfile.dir}</workingDirectory>
+                                <arguments>
+                                    <argument>image</argument>
+                                    <argument>push</argument>
+                                    <argument>${docker.image.prefix}/${project.artifactId}:${docker.image.tag}</argument>
+                                </arguments>
+                                <skip>${container.build.extraarg.contains('--load')}</skip>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+            </profile>
 
 </project>
