--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,7 @@
                                         <executable>${container.executable}</executable>
                                         <workingDirectory>${docker.image.dockerfile.dir}</workingDirectory>
                                         <arguments>
+                                            <argument>buildx</argument>
                                             <argument>build</argument>
                                             <argument>-f</argument>
                                             <argument>Dockerfile</argument>
@@ -185,7 +186,7 @@
                                             <argument>EXPOSED_PORT=${docker.image.exposed.port}</argument>
                                             <argument>--platform</argument>
                                             <argument>${container.platform}</argument>
-                                            <argument> ${container.build.extraarg}</argument>
+                                            <argument>${container.build.extraarg}</argument>
                                             <argument>-t</argument>
                                             <argument>${docker.image.prefix}/${project.artifactId}:${docker.image.tag}</argument>
                                             <argument>${project.build.directory}</argument>
